<resources>
    <string name="app_name">myOwn Improve Lexicon</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vocabulary">Vocabulary</string>
    <string name="start_to_learn_english">Start to learn words</string>
    <string name="by_shatik">By shatik</string>

    <string-array name="degree_remembered">
        <item>Well remembered</item>
        <item>So so remembered</item>
        <item>Poorly remembered</item>
    </string-array>

    <string name="no_subject">No subject</string>
    <string name="add_new_word">Add new word</string>
    <string name="word">Word</string>
    <string name="translate">Translate</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
    <string name="degree">Degree</string>
    <string name="degrees">Degrees</string>
    <string name="theme">Theme</string>
    <string name="themes">Themes</string>
    <string name="title_activity_themes">ThemesActivity</string>
    <string name="add_theme">Add theme</string>
    <string name="edit">Edit</string>
    <string name="filter">Filter</string>
    <string name="reset">Reset</string>
    <string name="ok">Ok</string>
    <string name="start">Start</string>
    <string name="count">Count</string>

    <string-array name="learn_mode">
        <item>Word - Translate</item>
        <item>Translate - Word</item>
    </string-array>

    <string name="not_all_fields_are_filled">Not all fields are filled</string>
    <string name="the_word_is_already_there">The word is already there</string>
    <string name="no_subj_cant_del">This theme cannot be removed</string>
    <string name="no_words">No words</string>
    <string name="mode">Mode</string>
    <string name="textview">TextView</string>
    <string name="next_word">Next word</string>
    <string name="show_translate">Show translate</string>
    <string name="edit_word_and_go_next">Edit word and go next</string>
    <string name="todo">TODO</string>
</resources>
